--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="calculator">
         <input type="text" placeholder="0" readonly>
         <div>
-            <button class="special">&#37;</button> <!-- Percentage -->
+            <button class="special">%</button> 
             <button class="clear">CE</button>
             <button class="clear">C</button>
             <button class="backspace">&#x232b;</button> <!-- Backspace symbol -->
@@ -19,19 +19,19 @@
             <button class="special">1/x</button>
             <button class="special">x&sup2;</button> <!-- Superscript 2 for square -->
             <button class="special">&radic;x</button> <!-- Square root -->
-            <button class="special">&divide;</button> <!-- Division symbol -->
+            <button class="special">/</button> 
         </div>
         <div>
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button class="special">&times;</button> <!-- Multiplication symbol -->
+            <button class="special">*</button> 
         </div>
         <div>
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button class="special">&minus;</button> <!-- Minus symbol -->
+            <button class="special">-</button> 
         </div>
         <div>
             <button>1</button>
